--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html-react-parser": "^0.10.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-google-charts": "^3.0.15",
     "react-picky-date-time": "^1.3.3",
     "react-player": "^1.14.2",
     "react-router-dom": "^5.1.2",
