--- a/cliente-twitGov/package.json
+++ b/cliente-twitGov/package.json
@@ -12,9 +12,13 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.7",
     "bootstrap": "4.3.1",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "html-react-parser": "^0.10.0",
     "react": "^16.8.3",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.8.3",
     "react-google-charts": "^3.0.15",
     "react-picky-date-time": "^1.3.3",
